# session-service

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: build.yml
config/: Cargo.toml
config/src/: lib.rs
proto/: session-service.proto
src/: cache.rs  cert.rs  config.rs  google_auth.rs  main.rs  token.rs
src/grpc/: mod.rs  session_service.rs  session_service_impl.rs
src/routes/: health.rs  login.rs  mod.rs  verify.rs
src/web/: login.rs  mod.rs  verify.rs
