[package]
name = "session-tyorka-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0.0-alpha.10"
actix-easy-multipart = "2.1.1"
env_logger = "0.7.1"
confy = "0.3.1"
log = "0.4.17"
rand = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13.0"
time = "0.3.11"
cookie = "0.16"
url = "2.2.2"
lazy_static = "1.4.0"
regex = "1.6.0"

