[package]
name = "session-service"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "=7.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7.1"
session_service_proto = {path = "grpc"}
config = {path = "./config"}
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
time = "0.3.11"
cookie = "0.16"
url = "2.2.2"
lazy_static = "1.4.0"
regex = "1.6.0"
tonic = { version = "0.8.1", features = ["codegen", "prost"] }
prost = "0.11"
warp = "0.3.2"
tokio = { version = "1.21.0", features = ["full"] }
tonic-reflection = "0.5.0"

[build-dependencies]
tonic-build = {version = "0.8", features = ["prost"]}

[workspace]
members = ["config", "grpc", "."]
